--- a/lectures/Day_2.ipynb
+++ b/lectures/Day_2.ipynb
@@ -84,11 +84,11 @@
     "## Review of Day 1\n",
     "\n",
     "- Liternals and their associated data types, variables, and basic operations\n",
-    "    - Numeric, String, Boolean, None\n",
+    "    - Four basic data types: Numeric, String, Boolean, None\n",
     "    - Collection of data types: List, Tuple, Set and Dictionary\n",
-    "    - Naming convention of variables\n",
+    "    - Naming of variables, rules and conventions\n",
     "- Built-in functions and operations\n",
-    "    - print, len, max, sum \n",
+    "    - print, type, len, max, sum \n",
     "- Loops\n",
     "    - `for` loop and `while` loop\n",
     "- How to use if/elif/else statements to control the logic of the code"
@@ -130,7 +130,7 @@
     "\n",
     "- __Session 1__:\n",
     "    - Python Script: Dump your code into a script\n",
-    "    - File I/O: Read from and write to files\n",
+    "    - File I/O: Read and write files\n",
     "- __Session 2__:\n",
     "    - Variants identification with VCF (Exercise after lunch)\n",
     "- __Session 3__:\n",
@@ -681,7 +681,7 @@
    "source": [
     "## Description of the task\n",
     "\n",
-    "You have a VCF file with a number of samples. You are interested in only one of the samples (sample1) and one region (chr5, 1,200,000-1,300,000). What you want to know is whether this sample has any variants in this region, and if so, which variants.\n"
+    "You have a VCF file with a number of samples. You are interested in only one of the samples (sample1) and one region (chr5, 1,200,000-1,300,000, including the start and end positions). What you want to know is whether this sample has any variants in this region, and if so, which variants.\n"
    ]
   },
   {
@@ -756,9 +756,9 @@
     "\n",
     "- Open the file and loop over lines (ignore lines with started with `#`)\n",
     "- Identify lines where chromosome is equal to `5` and position is between 1,200,000 and 1,300,000\n",
-    "- Isolate the column that contains the genotype for sample1\n",
-    "- Extract the genotypes only from the column\n",
-    "- Check if the genotype contains any alternate alleles\n",
+    "- Isolate the column that contains the genotype for sample1, e.g. `0/1:30:SM`\n",
+    "- Extract only the genotypes (e.g. `0/1`) from the column\n",
+    "- Check if the genotype contains any alternate alleles, i.e., if not `0/0`.\n",
     "- Print any variants containing alternate alleles for this sample between specified region"
    ]
   },
@@ -770,7 +770,7 @@
     }
    },
    "source": [
-    "<img src=\"../img/vcf_header.png\" alt=\"Drawing\" style=\"width: 1000px;\"/> "
+    "#### Open the file and loop over lines (ignore lines starting with `#`), and print the first record"
    ]
   },
   {
@@ -781,12 +781,12 @@
     }
    },
    "source": [
-    "__Open the file and loop over lines (ignore lines starting with #), and print the first record__"
+    "<img src=\"../img/vcf_header.png\" alt=\"Drawing\" style=\"width: 1000px; margin:0px;\"/> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -807,8 +807,9 @@
     "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    counter = 0\n",
     "    for line in fh:\n",
-    "        if not line.startswith('#'):  \n",
-    "            print(line.strip())\n",
+    "        if not line.startswith('#'):\n",
+    "            line = line.strip()\n",
+    "            print(line)\n",
     "            break\n",
     "# Next, find chromosome 5"
    ]
@@ -821,7 +822,7 @@
     }
    },
    "source": [
-    "__Identify lines where chromosome is 5 and position is between 1,200,000 and 1,300,000__"
+    "#### Identify lines where chromosome is `5`"
    ]
   },
   {
@@ -837,9 +838,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -849,8 +849,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\t106565\trs115608877\tG\tT\t.\tPASS\tAA=.;AC=7;AN=120;DP=91;GP=5:53565;BN=132\tGT:DP:CB\t1/0:1:SM\t1/0:3:SM\t0/0:1:SM\t0/0:2:SM\t0/0:0:S\t0/0:0:SM\t0/0:0:SM\t0/0:1:S\t0/0:0:S\t0/0:0:S\t0/0:2:SM\t0/1:1:SM\t0/0:3:SM\t0/1:0:SM\t0/0:2:SM\t1/0:1:S\t0/0:1:SM\t0/0:0:SM\t0/0:2:SM\t0/0:1:SM\t0/0:5:SM\t0/0:0:S\t0/0:1:SM\t0/0:0:S\t0/0:1:SM\t0/0:1:SM\t0/1:1:SM\t0/1:1:SM\t0/0:2:SM\t0/0:3:SM\t0/0:2:SM\t0/0:8:SM\t0/0:0:SM\t0/0:7:SM\t0/0:4:SM\t0/0:0:S\t0/0:2:S\t0/0:0:SM\t0/0:3:SM\t0/0:2:SM\t0/0:1:SM\t0/0:2:SM\t0/0:3:S\t0/0:0:SM\t0/0:3:SM\t0/0:1:SM\t0/0:0:SM\t0/0:0:SM\t0/0:3:S\t0/0:1:SM\t0/0:0:SM\t0/0:0:SM\t0/0:3:SM\t0/0:4:SM\t0/0:2:SM\t0/0:1:SM\t0/0:0:SM\t0/0:0:SM\t0/0:1:SM\t0/0:2:SM\n",
-      "\n"
+      "['5', '106565', 'rs115608877', 'G', 'T', '.', 'PASS', 'AA=.;AC=7;AN=120;DP=91;GP=5:53565;BN=132', 'GT:DP:CB', '1/0:1:SM', '1/0:3:SM', '0/0:1:SM', '0/0:2:SM', '0/0:0:S', '0/0:0:SM', '0/0:0:SM', '0/0:1:S', '0/0:0:S', '0/0:0:S', '0/0:2:SM', '0/1:1:SM', '0/0:3:SM', '0/1:0:SM', '0/0:2:SM', '1/0:1:S', '0/0:1:SM', '0/0:0:SM', '0/0:2:SM', '0/0:1:SM', '0/0:5:SM', '0/0:0:S', '0/0:1:SM', '0/0:0:S', '0/0:1:SM', '0/0:1:SM', '0/1:1:SM', '0/1:1:SM', '0/0:2:SM', '0/0:3:SM', '0/0:2:SM', '0/0:8:SM', '0/0:0:SM', '0/0:7:SM', '0/0:4:SM', '0/0:0:S', '0/0:2:S', '0/0:0:SM', '0/0:3:SM', '0/0:2:SM', '0/0:1:SM', '0/0:2:SM', '0/0:3:S', '0/0:0:SM', '0/0:3:SM', '0/0:1:SM', '0/0:0:SM', '0/0:0:SM', '0/0:3:S', '0/0:1:SM', '0/0:0:SM', '0/0:0:SM', '0/0:3:SM', '0/0:4:SM', '0/0:2:SM', '0/0:1:SM', '0/0:0:SM', '0/0:0:SM', '0/0:1:SM', '0/0:2:SM']\n"
      ]
     }
    ],
@@ -859,9 +858,10 @@
     "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
-    "            cols = line.strip().split('\\t')\n",
+    "            line = line.strip()\n",
+    "            cols = line.split('\\t')\n",
     "            if cols[0] == '5':\n",
-    "                print(line)\n",
+    "                print(cols)\n",
     "                break\n",
     "\n",
     "# Next, find the correct region"
@@ -875,14 +875,24 @@
     }
    },
    "source": [
-    "<img src=\"../img/vcf_header.png\" alt=\"Drawing\" style=\"width: 1200px;\"/> "
+    "#### Identify lines where chromosome is `5` and position is between `1,200,000` and `1,300,000`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
+    "<img src=\"../img/vcf_header.png\" alt=\"Drawing\" style=\"width: 1000px;\"/> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -901,10 +911,11 @@
     "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
-    "            cols = line.strip().split('\\t')\n",
+    "            line = line.strip()\n",
+    "            cols = line.split('\\t')\n",
     "            chrom = cols[0]\n",
     "            pos = int(cols[1])\n",
-    "            if chrom == '5' and 1200000 <= pos <= 1300000:\n",
+    "            if chrom == '5' and (1200000 <= pos <= 1300000):\n",
     "                print(cols)\n",
     "                break\n",
     "# Next, find the genotypes for sample1"
@@ -918,7 +929,7 @@
     }
    },
    "source": [
-    "### Isolate the column that contains the genotype for sample1"
+    "#### Isolate the column that contains the genotype for sample1"
    ]
   },
   {
@@ -934,9 +945,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -955,12 +965,13 @@
     "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
-    "            cols = line.strip().split('\\t')\n",
+    "            line = line.strip()\n",
+    "            cols = line.split('\\t')\n",
     "            chrom = cols[0]\n",
     "            pos = int(cols[1])\n",
-    "            if chrom == '5' and 1200000 <= pos <= 1300000:\n",
-    "                geno = cols[9]\n",
-    "                print(geno)\n",
+    "            if chrom == '5' and (1200000 <= pos <= 1300000):\n",
+    "                geno_col = cols[9]\n",
+    "                print(geno_col)\n",
     "                break\n",
     "                    \n",
     "# Next, extract the genotypes only"
@@ -993,7 +1004,7 @@
     }
    },
    "source": [
-    "__Extract the genotypes only from the column__"
+    "#### Extract the genotypes only from the column"
    ]
   },
   {
@@ -1009,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1029,11 +1040,13 @@
     "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
-    "            cols = line.strip().split('\\t')\n",
+    "            line = line.strip()\n",
+    "            cols = line.split('\\t')\n",
     "            chrom = cols[0]\n",
     "            pos = int(cols[1])\n",
-    "            if chrom == '5' and 1200000 <= pos <= 1300000:\n",
-    "                geno = cols[9].split(':')[0]\n",
+    "            if chrom == '5' and (1200000 <= pos <= 1300000):\n",
+    "                geno_col = cols[9]\n",
+    "                geno = geno_col.split(':')[0]\n",
     "                print(geno)\n",
     "                break\n",
     "# Next, find in which positions sample1 has alternate alleles"
@@ -1047,7 +1060,7 @@
     }
    },
    "source": [
-    "__Check if the genotype contains any alternate alleles__"
+    "#### Check if the genotype contains any alternate alleles"
    ]
   },
   {
@@ -1063,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1084,11 +1097,13 @@
     "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
-    "            cols = line.strip().split('\\t')\n",
+    "            line = line.strip()\n",
+    "            cols = line.split('\\t')\n",
     "            chrom = cols[0]\n",
     "            pos = int(cols[1])\n",
-    "            if chrom == '5' and 1200000 <= pos <= 1300000:\n",
-    "                geno = cols[9].split(':')[0]\n",
+    "            if chrom == '5' and (1200000 <= pos <= 1300000):\n",
+    "                geno_col = cols[9]\n",
+    "                geno = geno_col.split(':')[0]\n",
     "                if geno not in [\"0/0\"]:\n",
     "                    print(geno)\n",
     "#Next, print nicely"
@@ -1102,23 +1117,12 @@
     }
    },
    "source": [
-    "__Print any variants containing alternate alleles for this sample between specified region__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
-    "<img src=\"../img/vcf_header.png\" alt=\"Drawing\" style=\"width: 1000px; margin=0\"/> "
+    "#### Print any variants containing alternate alleles for this sample between specified region"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1139,15 +1143,17 @@
     "with open(vcf_file, 'r', encoding='utf-8') as fh:\n",
     "    for line in fh:\n",
     "        if not line.startswith('#'):\n",
-    "            cols = line.strip().split('\\t')\n",
+    "            line = line.strip()\n",
+    "            cols = line.split('\\t')\n",
     "            chrom = cols[0]\n",
     "            pos = int(cols[1])\n",
-    "            if chrom == '5' and 1200000 <= pos <= 1300000:\n",
-    "                geno = cols[9].split(':')[0]\n",
+    "            if chrom == '5' and (1200000 <= pos <= 1300000):\n",
+    "                geno_col = cols[9]\n",
+    "                geno = geno_col.split(':')[0]\n",
     "                if geno not in [\"0/0\"]:\n",
     "                    ref = cols[3]\n",
     "                    alt = cols[4]\n",
-    "                    info = f\"{chrom}:{pos}_{ref}-{alt} has genotype: {geno}\"\n",
+    "                    info = chrom + \":\" + str(pos) + \"_\" + ref + \"-\" + alt + \" has genotype: \"+ geno\n",
     "                    print(info)"
    ]
   },
