--- a/lectures/Day_3.ipynb
+++ b/lectures/Day_3.ipynb
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 176,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2039,14 +2039,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variant AG is active and expressed.\n"
+      "5:1235651_C-T has genotype: 1/1\n"
      ]
     }
    ],
    "source": [
-    "genotype = \"AG\"\n",
-    "result = \"Variant \" + genotype + \" is active and expressed.\"\n",
-    "print(result)"
+    "chrom = \"5\"\n",
+    "pos = 1235651\n",
+    "ref = \"C\"\n",
+    "alt = \"T\"\n",
+    "geno = \"1/1\"\n",
+    "info = chrom + \":\" + str(pos) + \"_\" + ref + \"-\" + alt + \" has genotype: \"+ geno\n",
+    "print(info)"
    ]
   },
   {
@@ -2064,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 177,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -2075,14 +2079,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variant AG is active and expressed.\n"
+      "5:1235651_C-T has genotype: 1/1\n"
      ]
     }
    ],
    "source": [
-    "genotype = \"AG\"\n",
-    "result = f\"Variant {genotype} is active and expressed.\"\n",
-    "print(result)"
+    "chrom = \"5\"\n",
+    "pos = 1235651\n",
+    "ref = \"C\"\n",
+    "alt = \"T\"\n",
+    "geno = \"1/1\"\n",
+    "info = f\"{chrom}:{pos}_{ref}-{alt} has genotype: {geno}\"\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "info = chrom + \":\" + str(pos) + \"_\" + ref + \"-\" + alt + \" has genotype: \"+ geno"
    ]
   },
   {
@@ -2098,7 +2119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 178,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -2109,14 +2130,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Variant AG is active and expressed.\n"
+      "5:1235651_C-T has genotype: 1/1\n"
      ]
     }
    ],
    "source": [
-    "genotype = \"AG\"\n",
-    "result = \"Variant {} is active and expressed.\".format(genotype)\n",
-    "print(result)"
+    "chrom = \"5\"\n",
+    "pos = 1235651\n",
+    "ref = \"C\"\n",
+    "alt = \"T\"\n",
+    "geno = \"1/1\"\n",
+    "info = \"{}:{}_{}-{} has genotype: {}\".format(chrom, pos, ref, alt, geno)\n",
+    "print(info)"
    ]
   },
   {
@@ -2143,21 +2168,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of gene TP53 is 355\n"
+      "Lengths of genes ['TP53', 'COX2'] are [355, 458]\n"
      ]
     }
    ],
    "source": [
-    "gene = \"TP53\"\n",
-    "length = 355\n",
-    "print(f\"Length of gene {gene} is {length}\")"
+    "genes = [\"TP53\", \"COX2\"]\n",
+    "lengths = [355,  458]\n",
+    "print(f\"Lengths of genes {genes} are {lengths}\")"
    ]
   },
   {
