--- a/assignment/Solutions_project.ipynb
+++ b/assignment/Solutions_project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -30,9 +30,9 @@
    "source": [
     "# Open the reference file (fasta) and loop through it, removing the first line (starts with >)\n",
     "# Sum the length of the lines, removing the newline character\n",
-    "with open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r') as f:\n",
+    "with open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.dna_sm.chromosome.7.fa\", 'r') as fh:\n",
     "    length = 0\n",
-    "    for line in f:\n",
+    "    for line in fh:\n",
     "        if not line.startswith(\">\"):\n",
     "            length += len(line.strip()) # add the length of the line, without newline character\n",
     "    print(length)\n"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -61,14 +61,14 @@
    "source": [
     "# Open the GTF file and loop throught it.\n",
     "# To find the genes, check the 3rd element of each line and add 1 if the feature is \"gene\"\n",
-    "with open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r') as g:\n",
-    "    genes = 0\n",
-    "    for line in g:\n",
+    "with open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r') as fh:\n",
+    "    num_genes = 0\n",
+    "    for line in fh:\n",
     "        if not line.startswith(\"#\"):\n",
     "            feature = line.split(\"\\t\")[2]\n",
     "            if feature == \"gene\":\n",
-    "                genes +=1\n",
-    "    print(genes)"
+    "                num_genes +=1\n",
+    "    print(num_genes)"
    ]
   },
   {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -110,17 +110,23 @@
     "# To find the number of transcripts, check the 3rd element for \"transcript\" while the specific gene exists\n",
     "# Can also be solved with bash using: \n",
     "# cat Homo_sapiens.GRCh38.93.gtf | grep ENSG00000001626 | grep \"\\ttranscript\\t\" | wc -l\n",
-    "g = open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r')\n",
-    "\n",
-    "# Find number of transcripts\n",
-    "transcripts = 0\n",
-    "for line in g:\n",
-    "    if not line.startswith(\"#\"):\n",
-    "        entries = line.split(\"\\t\")\n",
-    "        if \"ENSG00000001626\" in line and entries[2] == \"transcript\":\n",
-    "            transcripts += 1\n",
-    "print(\"Number of transcripts: \", transcripts)\n",
-    "g.close()"
+    "with open(\"../assignment/uncompressed-data/Homo_sapiens.GRCh38.93.gtf\", 'r') as fh:\n",
+    "    # Find number of transcripts\n",
+    "    num_transcripts = 0\n",
+    "    for line in fh:\n",
+    "        if not line.startswith(\"#\"):\n",
+    "            entries = line.split(\"\\t\")\n",
+    "            feature = entries[2]\n",
+    "            attribute = entries[8]\n",
+    "            if feature == 'transcript':\n",
+    "                li_attr = attribute.split(\"; \")\n",
+    "                for attr in li_attr:\n",
+    "                    if \"gene_id\" in attr:\n",
+    "                        gene_id = attr.strip().split()[1].strip('\"')\n",
+    "                        if gene_id == \"ENSG00000001626\":\n",
+    "                            num_transcripts += 1\n",
+    "                        break\n",
+    "    print(\"Number of transcripts: \", num_transcripts)\n"
    ]
   },
   {
@@ -132,13 +138,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "7\thavana\ttranscript\t117465784\t117504308\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000546407\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-207\"; transcript_source \"havana\"; transcript_biotype \"processed_transcript\"; transcript_support_level \"1\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117479304\t117530978\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000446805\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-204\"; transcript_source \"havana\"; transcript_biotype \"protein_coding\"; tag \"cds_end_NF\"; tag \"mRNA_end_NF\"; transcript_support_level \"4\";\n",
+      "\n",
+      "7\tensembl_havana\ttranscript\t117479963\t117668665\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000003084\"; transcript_version \"10\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-201\"; transcript_source \"ensembl_havana\"; transcript_biotype \"protein_coding\"; tag \"CCDS\"; ccds_id \"CCDS5773\"; tag \"basic\"; transcript_support_level \"1\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117480095\t117667071\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000426809\"; transcript_version \"5\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-202\"; transcript_source \"havana\"; transcript_biotype \"protein_coding\"; tag \"cds_end_NF\"; tag \"mRNA_end_NF\"; transcript_support_level \"5\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117559638\t117587749\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000472848\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-206\"; transcript_source \"havana\"; transcript_biotype \"processed_transcript\"; transcript_support_level \"5\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117611617\t117627910\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000468795\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-205\"; transcript_source \"havana\"; transcript_biotype \"protein_coding\"; tag \"cds_start_NF\"; tag \"mRNA_start_NF\"; transcript_support_level \"5\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117652843\t117715948\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000600166\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-208\"; transcript_source \"havana\"; transcript_biotype \"protein_coding\"; tag \"cds_start_NF\"; tag \"mRNA_end_NF\"; tag \"mRNA_start_NF\"; transcript_support_level \"5\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117689713\t117715971\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000429014\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-203\"; transcript_source \"havana\"; transcript_biotype \"processed_transcript\"; transcript_support_level \"5\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117710017\t117715873\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000608965\"; transcript_version \"5\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-209\"; transcript_source \"havana\"; transcript_biotype \"processed_transcript\"; tag \"mRNA_end_NF\"; transcript_support_level \"5\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117710132\t117715827\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000610149\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-210\"; transcript_source \"havana\"; transcript_biotype \"processed_transcript\"; transcript_support_level \"5\";\n",
+      "\n",
+      "7\thavana\ttranscript\t117713753\t117715901\t.\t+\t.\tgene_id \"ENSG00000001626\"; gene_version \"14\"; transcript_id \"ENST00000621535\"; transcript_version \"1\"; gene_name \"CFTR\"; gene_source \"ensembl_havana\"; gene_biotype \"protein_coding\"; transcript_name \"CFTR-211\"; transcript_source \"havana\"; transcript_biotype \"retained_intron\"; tag \"mRNA_end_NF\"; transcript_support_level \"5\";\n",
+      "\n",
       "Longest transcript:  \"ENST00000003084\" \n",
       "Length:  188703\n"
      ]
@@ -156,10 +184,12 @@
     "for line in g:\n",
     "    if not line.startswith(\"#\"):\n",
     "        entries = line.strip().split(\"\\t\")\n",
-    "        if \"ENSG00000001626\" in line and entries[2] == \"transcript\":\n",
+    "        feature = entries[2]\n",
+    "        if \"ENSG00000001626\" in line and feature == \"transcript\":\n",
     "            attribute = entries[8].split(\"; \")\n",
     "            transcriptID = attribute[2].strip().split(' ')[1]\n",
     "            length = int(entries[4]) - int(entries[3]) + 1\n",
+    "            print(line)\n",
     "            if length > longest_transcript[0]:\n",
     "                longest_transcript = (length, transcriptID)\n",
     "                                \n",
@@ -260,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Fetch the DNA sequences of all exons for that transcript, spliced together to one sequence."
+    "### 4. Fetch the DNA sequences of all exons for that transcript, concatenate into  one sequence."
    ]
   },
   {
@@ -356,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +432,7 @@
     "else:\n",
     "    print(\"The start codon is not ATG\")\n",
     "\n",
-    "if chr7[stop_codon-1:stop_codon+2] == \"TAG\" or chr7[stop_codon-1:stop_codon+2] == \"TAA\" or chr7[stop_codon-1:stop_codon+2] == \"TGA\":\n",
+    "if chr7[stop_codon-1:stop_codon+2] in [\"TAG\", \"TAA\", \"TGA\"]:\n",
     "    print(\"The stop codon is\", chr7[stop_codon-1:stop_codon+2], \"and starts at position\", stop_codon)\n",
     "else:\n",
     "    print(\"The stop codon does not correspond to a proper stop codon\")"
@@ -412,12 +442,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Translate the above sequence of all exons into amino acids, using an implementation of the translation table from the utils.rna package"
+    "### 6. Translate the above sequence of all exons into amino acids, using an implementation of the translation table from the utils.rna package\n",
+    "\n",
+    "strand is all positive for this transcript. For more robust code, you also need to think about the translation direction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +471,9 @@
     "for line in g:\n",
     "    if not line.startswith(\"#\"):\n",
     "        entries = line.strip().split(\"\\t\")\n",
+    "        strand = entries[6]\n",
     "        if \"ENSG00000001626\" in line:\n",
+    "            # print('strand=',strand)\n",
     "            if entries[2] == \"exon\":\n",
     "                attribute = entries[8].split(\"; \")\n",
     "                transcriptID = attribute[2].strip().split(' ')[1]\n",
