--- a/exercises/day4/Day_4_exercise_1.ipynb
+++ b/exercises/day4/Day_4_exercise_1.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "1eabe14c",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
     "THRESHOLD_HIGH = 60.0 # These variables are accessible throughout the module.\n",
     "\n",
     "def readseq(seqfile):\n",
-    "    with open(seqfile, \"r\", encoding=\"utf-8\") as fpin:\n",
+    "    with open(seqfile, \"r\") as fpin:\n",
     "        seq = \"\"\n",
     "        for line in fpin:\n",
     "            if not line.startswith(\">\"):\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "5a16eff2",
    "metadata": {},
    "outputs": [
@@ -180,13 +180,14 @@
       "The GC content of the sequence from ../../downloads/one_dna_sequence.fa is 53.53%, level is low\n",
       "The GC content of the sequence from ../../downloads/one_dna_sequence.fa is 53.53%, level is low\n",
       "The GC content of the sequence from ../../downloads/one_dna_sequence.fa is 53.53%, level is high\n",
+      "The GC content of the sequence from ../../downloads/one_dna_sequence.fa is 53.53%, level is high\n",
       "The GC content of the sequence from ../../downloads/one_dna_sequence.fa is 53.53%, level is high\n"
      ]
     }
    ],
    "source": [
     "def readseq(seqfile): #    \n",
-    "    with open(seqfile, \"r\", encoding=\"utf-8\") as fpin:\n",
+    "    with open(seqfile, \"r\") as fpin:\n",
     "        seq = \"\"\n",
     "        for line in fpin:\n",
     "            if not line.startswith(\">\"):\n",
@@ -240,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "92d79b74",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "positional argument follows keyword argument (3674942016.py, line 1)",
+     "evalue": "positional argument follows keyword argument (3757185225.py, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[19], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    level_message = check_gc_content_level(\"../../downloads/one_dna_sequence.fa\", threshold_low=40, 65)\u001b[0m\n\u001b[0m                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[23], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    level_message = check_gc_content_level(\"../../downloads/one_dna_sequence.fa\", threshold_low=40, 65)\u001b[0m\n\u001b[0m                                                                                                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "49626372",
    "metadata": {},
    "outputs": [
@@ -273,7 +274,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m level_message \u001b[38;5;241m=\u001b[39m check_gc_content_level(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../downloads/one_dna_sequence.fa\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m40\u001b[39m, threshold_high\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m65\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(level_message)\n",
+      "Cell \u001b[0;32mIn[24], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# This call will raise a TypeError because the function definition expects threshold_high as the second argument.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# You cannot provide threshold_high after threshold_low as a keyword argument, as both need to be positional.\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Correct order: threshold_high followed by threshold_low.\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m level_message \u001b[38;5;241m=\u001b[39m check_gc_content_level(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../../downloads/one_dna_sequence.fa\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m40\u001b[39m, threshold_high\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m65\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(level_message)\n",
       "\u001b[0;31mTypeError\u001b[0m: check_gc_content_level() got multiple values for argument 'threshold_high'"
      ]
     }
