--- a/exercises/day4/Day_4_exercise_2.ipynb
+++ b/exercises/day4/Day_4_exercise_2.ipynb
@@ -154,7 +154,7 @@
     "    Returns:\n",
     "        str: The DNA sequence in uppercase.\n",
     "    \"\"\"\n",
-    "    with open(seqfile, \"r\", encoding=\"utf-8\") as fpin:\n",
+    "    with open(seqfile, \"r\") as fpin:\n",
     "        seq = \"\"\n",
     "        for line in fpin:\n",
     "            if not line.startswith(\">\"):\n",
