--- a/lectures/Day_4.ipynb
+++ b/lectures/Day_4.ipynb
@@ -106,7 +106,7 @@
     }
    },
    "source": [
-    "### Variables defined inside the function are local variables"
+    "#### Variables defined inside the function are local variables"
    ]
   },
   {
@@ -165,7 +165,7 @@
     }
    },
    "source": [
-    "### Global variables can be accessed both inside and outside of the function"
+    "#### Global variables can be accessed both inside and outside of the function"
    ]
   },
   {
@@ -200,7 +200,7 @@
     }
    },
    "source": [
-    "- Change in the function will not change the global variable"
+    "#### Change a variable with the same name inside the function will not change the global variable"
    ]
   },
   {
@@ -238,7 +238,7 @@
     }
    },
    "source": [
-    "- Pass global variable as argument"
+    "#### Pass a global variable as an argument"
    ]
   },
   {
@@ -266,8 +266,7 @@
     }
    },
    "source": [
-    "### More on functions: scope - global vs local variables cont.\n",
-    "List as global variables\n"
+    "#### Use list as global variables"
    ]
   },
   {
@@ -305,7 +304,7 @@
     }
    },
    "source": [
-    "Will the global variable never to changed by function?"
+    "#### Will the global variable never to changed by function?"
    ]
   },
   {
@@ -389,7 +388,7 @@
     }
    },
    "source": [
-    "Functions that `return` are easier to repurpose than those that `print` their result"
+    "#### Functions that `return` are easier to repurpose than those that `print` their result"
    ]
   },
   {
@@ -439,7 +438,7 @@
     }
    },
    "source": [
-    "- Functions without any `return` statement returns `None`\n"
+    "#### Functions without any `return` statement returns `None`\n"
    ]
   },
   {
@@ -552,7 +551,7 @@
     }
    },
    "source": [
-    "- The order of keyword arguments does not matter"
+    "#### The order of keyword arguments does not matter"
    ]
   },
   {
@@ -582,7 +581,7 @@
     }
    },
    "source": [
-    "- Positional arguments must be in front of keyword arguments"
+    "#### Positional arguments must be in front of keyword arguments"
    ]
   },
   {
@@ -611,12 +610,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lecture is ongoing.\n",
+      "The lecture is ongoing!\n",
+      "The lecture is ongoing...\n"
+     ]
+    }
+   ],
    "source": [
     "def format_sentence(subject, value, end):\n",
-    "    return 'The ' + subject + ' is ' + value + end\n",
+    "    return f\"The {subject} is {value}{end}\"\n",
     "\n",
     "print(format_sentence('lecture', 'ongoing', '.'))\n",
     "\n",
@@ -640,12 +649,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lecture is ongoing.\n",
+      "The lecture is ongoing...\n"
+     ]
+    }
+   ],
    "source": [
     "def format_sentence(subject, value, end='.'):\n",
-    "    return 'The ' + subject + ' is ' + value + end\n",
+    "    return f\"The {subject} is {value}{end}\"\n",
     "\n",
     "print(format_sentence('lecture', 'ongoing'))\n",
     "\n",
@@ -669,20 +687,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lecture is ongoing.\n",
+      "The lecture is ongoing and self-referential!\n"
+     ]
+    }
+   ],
    "source": [
     "def format_sentence(subject, value, end='.', second_value=None):\n",
     "    if second_value is None:\n",
-    "        return 'The ' + subject + ' is ' + value + end\n",
+    "        return f\"The {subject} is {value}{end}\"\n",
     "    else:\n",
-    "        return 'The ' + subject + ' is ' + value + ' and ' + second_value + end\n",
+    "        return f\"The {subject} is {value} and {second_value}{end}\"\n",
     "\n",
     "print(format_sentence('lecture', 'ongoing'))\n",
     "\n",
-    "print(format_sentence('lecture', 'ongoing',\n",
-    "                      second_value='self-referential', end='!'))"
+    "print(format_sentence('lecture', 'ongoing', second_value='self-referential', end='!'))"
    ]
   },
   {
@@ -695,9 +721,8 @@
    },
    "source": [
     "### Small detour: Python's value for missing values: `None`\n",
-    "\n",
-    "- Default value for optional arguments\n",
-    "- Implicit return value of functions without a `return`\n",
+    "- It is the default value for optional arguments\n",
+    "- It is also the implicit return value of functions without a `return`\n",
     "- `None` is `None`, not anything else"
    ]
   },
@@ -786,7 +811,7 @@
     "### A short note on code structure\n",
     "\n",
     "- functions\n",
-    "- modules (files)\n",
+    "- modules (Python script files)\n",
     "- documentation"
    ]
   },
@@ -799,7 +824,7 @@
     }
    },
    "source": [
-    "#### Why functions?\n",
+    "### Why functions?\n",
     "- Cleaner code\n",
     "- Better defined tasks in code\n",
     "- Re-usability\n",
@@ -815,7 +840,7 @@
     }
    },
    "source": [
-    "#### Why modules?\n",
+    "### Why modules?\n",
     "\n",
     "- Cleaner code\n",
     "- Better defined tasks in code\n",
@@ -1377,36 +1402,17 @@
     }
    },
    "source": [
-    "### Places for documentation:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''"
-   },
-   "source": [
+    "### Places for documentation:\n",
     "#### 1. At the beginning of the file\n",
     "```python\n",
     "     \"\"\"\n",
     "     This module provides functions for ...\n",
     "     \"\"\"\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_marker": "'''",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "source": [
+    "```\n",
     "#### 2. At every function definition under `def` \n",
     "```python\n",
     "    def function_name(parameters):\n",
-    "        \"\"\"*\n",
+    "        \"\"\"\n",
     "        This function performs ...\n",
     "        \"\"\"\n",
     "        # code block\n",
